infra/envoy-gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: homelab-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/controller
