infra/envoy-gateway/metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: envoy-gateway-system
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: opentelemetry-collector
      app.kubernetes.io/instance: envoy-addons
      component: standalone-collector
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: a211a0a7fd52efe5818f62e345c2f3919513a961ed40074a8629ec497fe36ff6
      labels:
        app.kubernetes.io/name: opentelemetry-collector
        app.kubernetes.io/instance: envoy-addons
        component: standalone-collector
    spec:
      serviceAccountName: otel-collector
      securityContext: {}
      containers:
        - name: opentelemetry-collector
          args:
            - --config=/conf/relay.yaml
          securityContext: {}
          image: "otel/opentelemetry-collector-contrib:0.121.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: envoy-als
              containerPort: 9000
              protocol: TCP
            - name: jaeger-compact
              containerPort: 6831
              protocol: UDP
            - name: jaeger-grpc
              containerPort: 14250
              protocol: TCP
            - name: jaeger-thrift
              containerPort: 14268
              protocol: TCP
            - name: otlp
              containerPort: 4317
              protocol: TCP
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
            - name: zipkin
              containerPort: 9411
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 13133
          readinessProbe:
            httpGet:
              path: /
              port: 13133
          volumeMounts:
            - mountPath: /conf
              name: opentelemetry-collector-configmap
      volumes:
        - name: opentelemetry-collector-configmap
          configMap:
            name: otel-collector
            items:
              - key: relay
                path: relay.yaml
      hostNetwork: false
